# karas-project-template

./: .gitignore  Dockerfile  LICENSE.md  Makefile  README.md  pyproject.toml  readme.md
.github/workflows/: workflows.yaml
src/: main.py
src/settings/: __init__.py
terraform/: main.tf
tests/: test_main.py
