[tool.poetry]
name = "karas-project-template"  # REPLACE WITH YOUR PROJECT NAME
version = "0.1.0"
description = ""
authors = ["Michal Karas <mjkaras93@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.0"
black = "^23.7.0"
pre-commit = "^3.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
