[project]
name = "karas-project-template"  # REPLACE WITH YOUR PROJECT NAME
version = "0.1.0"
description = ""
authors = [
    {name = "Michal Karas", email = "mjkaras93@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pytest>=7.4.0",
    "black>=23.7.0",
    "pre-commit>=3.3.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]