[project]
name = "karas-project-template"  # REPLACE WITH YOUR PROJECT NAME
version = "0.1.0"
description = ""
authors = [
    {name = "Michal Karas", email = "mjkaras93@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.12.5",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "black>=26.1.0",
    "pre-commit>=4.5.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]